--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbGxBQ2FpYS1SQm41ZW9CM1FzakhTZWdETERtZ3xBQ3Jtc0tsc3lHbDNlNnBJWTFMajcxNU1nYWc3ZGhkdDNIZmFaZWlNb2lmYU5uZEZvdzRyOV9mYW5uajdnNVdmS1UxVUg4V2piN0JGY0JoM2VHano5N28zM1gyNEU3amx6UTZYVmxBLTFxVnJEMFZ3ZHFGV2RtVQ&q=https%3A%2F%2Fv.ht%2FJkrjw&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbURQMmx2Qm53ZnhOamlrUmRuOWdnd0hzYUZuQXxBQ3Jtc0ttWXk4V0FZUUlPY2VlaFJITW5zbUJxWFpmREFQT1FkMWxNV09GLW5zU3dxSHAwSXR1UURRbXFaaTRQZTJrRHlQcFVJYXRyWWhMVGtONTZJX1hFeVZSSkV5NENQQWpCc2JmOWtQQWhFMnVtM2psUGFaZw&q=https%3A%2F%2Fv.ht%2F16YrX&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
